fix select border broken layout problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /* getElementDimension()でのサイズが2回目以降で異なる場合の為のworkaround */
 .node-text_selected {
-  border: solid 1px #afafaf;
+  background: #cfcfcf;
 }
 
 foreignObject {
